[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minivectordb"
version = "2.0"
authors = [
  { name="Carlo Moro", email="cnmoro@gmail.com" },
]
description = "A python project aimed at extracting embeddings from textual data and performing semantic search."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy<2",
    "transformers",
    "faiss-cpu",
    "torch",
    "pytest",
    "pytest-cov",
    "scikit-learn",
    "thefuzz[speedup]",
    "FlagEmbedding",
    "onnx",
    "onnxruntime",
    "onnxruntime-extensions"
]

[project.urls]
"Homepage" = "https://github.com/cnmoro/Mini-Vector-DB"
"Bug Tracker" = "https://github.com/cnmoro/Mini-Vector-DB/issues"